--- a/nim.cfg
+++ b/nim.cfg
@@ -1,5 +1,5 @@
 --define:useMimalloc
 --cc:clang
 
-# --debugger:gdb
-# --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
+--debugger:gdb
+--passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
