--- a/nim.cfg
+++ b/nim.cfg
@@ -2,6 +2,5 @@
 --define:ssl
 --define:adwMinor=6
 --cc:clang
-
---debugger:gdb
---passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
+# --debugger:gdb
+# --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
