--- a/nim.cfg
+++ b/nim.cfg
@@ -2,5 +2,11 @@
 --define:ssl
 --define:adwMinor=6
 --cc:clang
-# --debugger:gdb
-# --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
+
+@if release:
+  --passC:"-Os -fdata-sections -ffunction-sections -fvisibility=hidden -fno-unwind-tables -g0 -fmerge-all-constants"
+  --passL:"-Wl,--gc-sections -Wl,--strip-all -Wl,-O1 -Wl,--as-needed -Wl,--icf=all"
+@else
+  --debugger:gdb
+  --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
+@end
