fix: cfg: don't use icf
Most linkers don't have it.

--- a/nim.cfg
+++ b/nim.cfg
@@ -5,7 +5,7 @@
 
 @if release:
   --passC:"-Os -fdata-sections -ffunction-sections -fvisibility=hidden -fno-unwind-tables -g0 -fmerge-all-constants"
-  --passL:"-Wl,--gc-sections -Wl,--strip-all -Wl,-O1 -Wl,--as-needed -Wl,--icf=all"
+  --passL:"-Wl,--gc-sections -Wl,--strip-all -Wl,-O1 -Wl,--as-needed -Wl"
 @else
   --debugger:gdb
   --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
