--- a/nim.cfg
+++ b/nim.cfg
@@ -3,9 +3,11 @@
 --define:adwMinor=6
 --cc:clang
 
+--warning:UnreachableCode:off
 @if release:
   --passC:"-Os -fdata-sections -ffunction-sections -fvisibility=hidden -fno-unwind-tables -g0 -fmerge-all-constants"
   --passL:"-Wl,--gc-sections -Wl,--strip-all -Wl,-O1 -Wl,--as-needed -Wl"
+  --warning:Deprecated:off
 @else
   --debugger:gdb
   --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
