fix: use libbacktrace

--- a/nim.cfg
+++ b/nim.cfg
@@ -3,6 +3,11 @@
 --define:adwMinor=6
 --cc:clang
 
+--debugger:native
+--stacktrace:off
+--define:nimStackTraceOverride
+--import:libbacktrace
+
 --warning:UnreachableCode:off
 @if release:
   --passC:"-Os -fdata-sections -ffunction-sections -fvisibility=hidden -fno-unwind-tables -g0 -fmerge-all-constants"
