--- a/nim.cfg
+++ b/nim.cfg
@@ -3,17 +3,12 @@
 --define:adwMinor=6
 --cc:clang
 
---debugger:native
 --stacktrace:off
 --define:nimStackTraceOverride
 --import:libbacktrace
 
 --warning:UnreachableCode:off
-@if release:
-  --passC:"-Os -fdata-sections -ffunction-sections -fvisibility=hidden -fno-unwind-tables -g0 -fmerge-all-constants"
-  --passL:"-Wl,--gc-sections -Wl,--strip-all -Wl,-O1 -Wl,--as-needed -Wl"
-  --warning:Deprecated:off
-@else
+@if not release:
   --debugger:gdb
   --passC:"-g3 -O0 -fno-omit-frame-pointer -gdwarf-5"
 @end
